v4.9.0/_sources/generated/pcdsdevices.ccm.CCM.rst.txt
pcdsdevices.ccm.CCM
===================

.. currentmodule:: pcdsdevices.ccm

.. autoclass:: CCM

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - theta0_deg (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{_constants_prefix}:THETA0``
          - Reference angle for the first crystal in deg.
          - config
          - Inherited from :class:`~pcdsdevices.ccm.CCMConstantsMixin`
    
        * - dspacing (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{_constants_prefix}:DSPACING``
          - Crystal lattice spacing.
          - config
          - Inherited from :class:`~pcdsdevices.ccm.CCMConstantsMixin`
    
        * - gr (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{_constants_prefix}:GR``
          - The radius of the sapphire ball connected to the Alio stage in mm.
          - config
          - Inherited from :class:`~pcdsdevices.ccm.CCMConstantsMixin`
    
        * - gd (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{_constants_prefix}:GD``
          - Distance between the rotation axis and the center of the sapphire sphere located on the Alio stage in mm.
          - config
          - Inherited from :class:`~pcdsdevices.ccm.CCMConstantsMixin`
    
        * - energy
          - :class:`~pcdsdevices.ccm.CCMEnergy`
          - 
          - PseudoPositioner that moves the alio in terms of the calculated CCM energy.
          - hinted
          - 
    
        * - energy_with_vernier
          - :class:`~pcdsdevices.ccm.CCMEnergyWithVernier`
          - 
          - PsuedoPositioner that moves the alio in terms of the calculated CCM energy while also requesting a vernier move.
          - normal
          - 
    
        * - alio (UnrelatedComponent)
          - :class:`~pcdsdevices.ccm.CCMAlio`
          - 
          - The motor that rotates the CCM crystal.
          - normal
          - 
    
        * - theta2fine (UnrelatedComponent)
          - :class:`~pcdsdevices.ccm.CCMMotor`
          - 
          - The motor that controls the fine adjustment of the of the second crystal theta angle.
          - normal
          - 
    
        * - theta2coarse (UnrelatedComponent)
          - :class:`~pcdsdevices.ccm.CCMPico`
          - 
          - The motor that controls the coarse adjustment of the of the second crystal theta angle.
          - normal
          - 
    
        * - chi2 (UnrelatedComponent)
          - :class:`~pcdsdevices.ccm.CCMPico`
          - 
          - The motor that controls the adjustment of thesecond crystal chi angle.
          - normal
          - 
    
        * - x (UnrelatedComponent)
          - :class:`~pcdsdevices.ccm.CCMX`
          - 
          - Combined motion of the CCM X motors.
          - normal
          - 
    
        * - y (UnrelatedComponent)
          - :class:`~pcdsdevices.ccm.CCMY`
          - 
          - Combined motion of the CCM Y motors.
          - normal
          - 
    

    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: insert
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: remove
    .. automethod:: reset_calc_constant_defaults
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    .. automethod:: warn_invalid_constants
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: dspacing_val
    .. autoattribute:: gd_val
    .. autoattribute:: gr_val
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: lightpath_cpts
    .. autoattribute:: needs_parent
    .. autoattribute:: stage_group
    .. autoattribute:: theta0_deg_val
    .. autoattribute:: theta0_rad_val
    .. autoattribute:: transmission
    
    